git HEAD

    * Route::Part: Deprecate ->extra accessor. Use ->regular_notes instead
    * Route::Part: Add ->regular_notes and ->current_notes accessors.
      Note that current_notes is NOT STABLE yet. It may be change without
      further notice.
    * Route::Part: Add ->footpath_{duration,parts,type} accessors
    * efa: Show current route information provided by the EFA backend, such
      as cancelled stops or diversions.
    * efa -E: Show transfer walking duration when available
    * efa: Extend --ignore-info default (this option will probably be
      overhauled in a future release)

Travel::Routing::DE::VRR 2.11 - Sun Jun 14 2015

    * efa: Fix encoding issues when using -w, -t, -d, -a and similar
    * Travel::Routing::DE::EFA::Route::Part: Add train_product accessor
    * Improve support for walking connections
    * Handle "nicht umsteigen" messages and other unusual connection types

Travel::Routing::DE::VRR 2.10 - Fri May 29 2015

    * efa: Changed -p/--proximity default walking time from 8 to 10 minutes
    * efa: The -p/--proximity option now takes an optional duration argument
    * EFA: use_near_stops now accepts an integer (interpreted as walking time
      in minutes) instead of a boolean value

Travel::Routing::DE::VRR 2.09 - Fri Jan 09 2015

    * Travel::Routing::DE::EFA::Exception::Ambiguous: Add post_value accessor
      which contains the ambiguous input value
    * Improve error messages
    * Add VRR2 and DING EFA services

Travel::Routing::DE::VRR 2.08 - Wed Oct 08 2014

    * efa: Add -l / --list option
    * efa: Add -s / --service option
    * Travel::Routing::DE::EFA::get_efa_urls() now returns a list of hashrefs
    * Documentation improvements

Travel::Routing::DE::VRR 2.07 - Fri Aug 08 2014

    * Add URLs for several austrian EFA services
      (pointed out by Gregor Herrmann)
    * Support EFA services which do not distinguish between scheduled
      and realtime data (also pointed out by Gregor Herrmann)