@@ -16,7 +16,7 @@ use Exception::Class;
 use Getopt::Long qw/:config no_ignore_case/;
 use List::Util qw(first);
 
-our $VERSION = '2.11';
+our $VERSION = '2.12';
 my $ignore_info = 'Fahrradmitnahme|Einstiegshilfe';
 my $efa;
 my $efa_url = 'http://efa.vrr.de/vrr/XSLT_TRIP_REQUEST2';
@@ -424,7 +424,7 @@ efa - unofficial efa.vrr.de command line client
 
 =head1 VERSION
 
-version 2.11
+version 2.12
 
 =head1 DESCRIPTION
 
